--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "lilysturtles",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node --test test/*.test.js"
   },
   "dependencies": {
     "express": "^4.21.0",
