--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "node --test test/*.test.js"
   },
   "dependencies": {
+    "@techstark/opencv-js": "^4.12.0-release.1",
     "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.0"
